# rust-roguelike

./: Cargo.toml  Readme.md  index.html  savegame.json
docs/: combat.md  design-ideas.md  feature-requests.md  known-bugs.md  stats.md  todo.md
raws/: spawns copy.json  spawns.json
src/: components.rs  constants.rs  damage_system.rs  gamesystem.rs  main.rs  player.rs  saveload_system.rs  spawner.rs
src/effects/: damage.rs  mod.rs  particles.rs  triggers.rs
src/gamelog/: logstore.rs
src/gui/: hud.rs  tooltips.rs
src/map/: dungeon.rs  mod.rs  themes.rs  tiletype.rs
src/map_builders/: mod.rs  town.rs
src/map_builders/algorithms/: bsp_dungeon.rs  bsp_interior.rs  mod.rs
src/map_builders/levels/: dark_elves.rs  dwarf_fort_builder.rs  forest.rs  limestone_cavern.rs  mod.rs  mushroom_forest.rs  town.rs
src/map_builders/prefab_builder/: mod.rs  prefab_rooms.rs
src/map_builders/utility/: area_starting_points.rs  mod.rs  room_based_stairs.rs  room_based_starting_position.rs  room_corner_rounding.rs  room_draw.rs  room_exploder.rs  room_sorter.rs  rooms_corridors_bsp.rs  rooms_corridors_dogleg.rs  rooms_corridors_lines.rs  rooms_corridors_nearest.rs  starting_points.rs
src/raws/: effect_structs.rs  item_structs.rs  mob_structs.rs  mod.rs  prop_structs.rs  rawmaster.rs  spell_structs.rs  weapon_traits.rs
src/systems/: combat_system.rs  inventory_system.rs  melee_combat_system.rs  mod.rs  ranged_combat_system.rs
src/systems/ai/: adjacent_ai_system.rs  encumbrance_system.rs  initiative_system.rs  (+1 more)
wasm/: index.html  rust-roguelike.js  rust-roguelike_bg.wasm
(+2 files in other folders)
