[package]
name = "rust-roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
rltk = { version = "0.8.7", features = ["serde"] }
specs = { version = "0.20", features = ["serde"] }
specs-derive = "0.4.1"
serde= { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
lazy_static = "1.4.0"
regex = "1.3.6"
petgraph = "0.5.0"